welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:7: error: value / is not a member of object Math
  return Math/max(a, b)
             ^maxMod5:7: error: not found: value max
  return Math/max(a, b)
              ^